--- a/crafting_combinator/locale/en/en.cfg
+++ b/crafting_combinator/locale/en/en.cfg
@@ -54,6 +54,7 @@ empty-inserters=Empty inserters' hands (prevents jamming)
 read-recipe=Read the current recipe
 read-speed=Read the machine's crafting speed
 read-machine-status=Read machine status
+read-all-recipes=Read all recipes
 multiply-by-input=Multiply results by input count
 multiply-by-input:tooltip=Take each resulting signal and multiply it by the strength of the chosen input signal before outputting it
 divide-by-output=Divide results by product/ingredient count
@@ -68,6 +69,8 @@ chest-position:tooltip=Where the combinator should look for the overflow chest, 
 chest-position:behind=Behind
 chest-position:right=Right
 chest-position:left=Left
+chest-position:front-left=Front left
+chest-position:front-right=Front right
 chest-position:behind-right=Behind right
 chest-position:behind-left=Behind left
 craft-until-zero=Keep crafting until zero
