--- a/crafting_combinator/locale/de/de.cfg
+++ b/crafting_combinator/locale/de/de.cfg
@@ -46,6 +46,7 @@ discard-fluids=Flüssigkeiten verwerfen
 empty-inserters=Greifer leeren (verhindert Blockierungen)
 read-speed=Herstellungsgeschwindigkeit auslesen
 read-machine-status=Status auslesen
+read-all-recipes=Lesen Sie alle Rezepte
 multiply-by-input=Ergebnisse mit der Einganssignalstärke multiplizieren
 multiply-by-input:tooltip=Mulpiziert jedes Signal mit der Signalstärke des ausgewählten Einganssignals bevor es ausgegeben wird
 divide-by-output=Ergebnisse durch die Menge im Rezept teilen
