--- a/crafting_combinator/locale/cs/cs.cfg
+++ b/crafting_combinator/locale/cs/cs.cfg
@@ -49,6 +49,7 @@ empty-inserters=Vyprazdňovat překladače (zamezuje zasekávání)
 read-recipe=Číst aktuální recept
 read-speed=Číst rychlost výrobny
 read-machine-status=Číst status výrobny
+read-all-recipes=Přečtěte si všechny recepty
 multiply-by-input=Vynásobit výsledky vstupní hodnotou
 multiply-by-input:tooltip=Každý výstupní signál bude před nastavením na výstup vynásoben hodnotou vybraného vstupního signálu
 divide-by-output=Vydělit výsledky počtem produktu/ingredience
@@ -63,6 +64,8 @@ chest-position:tooltip=Kde má kombinátor hledat truhlu na přebytky, vzhledem 
 chest-position:behind=Vzadu
 chest-position:right=Vpravo
 chest-position:left=Vlevo
+chest-position:front-left=Vpředu vlevo
+chest-position:front-right=Vpředu vpravo
 chest-position:behind-right=Vzadu vpravo
 chest-position:behind-left=Vzadu vlevo
 craft-until-zero=Čekat až sigál klesne na nulu
